# aro

./: .gitignore  Cargo.toml  README.md  rustfmt.toml  sets.json
src/: data.rs  filter.rs  main.rs  parser.rs
static/: header.html  help.html  style.css
