[package]
name = "aro"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"
actix-web = { version = "4.3", default_features = false, features = ["macros"] }
itertools = "0.11"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
regex = { version = "1.7", default_features = false, features = ["std"] }

[dev-dependencies]
test-case = "3.1"
