[package]
name = "aro"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
nom = "7.1"
actix-web = { version = "4.5", default-features = false, features = ["macros"] }
itertools = "0.12"
time = { version = "0.3", features = ["serde", "serde-human-readable"] }
regex = { version = "1.10", default-features = false, features = ["std", "unicode-perl"] }

[dev-dependencies]
test-case = "3.3"
